0026435: Visualization - V3d_View::ConvertToGrid returns wrong coordinates for non-orthogonal projection